2007-04-05  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: pass destroy function pointer when
	  creating instances of generic types
	* vala/valaclass.vala: add get_type_parameters method

2007-04-04  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l: improve cast support
	* vala/valasemanticanalyzer.vala: fix ownership handling of local arrays
	* vala/valacodegenerator.vala: skip code generation for static
	  interfaces, downgrade generic management support message to warning
	* vala/valacallback.vala: support callbacks as property type

2007-04-04  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l: support casts to generic types
	* vala/valasymbolresolver.vala, vala/valatypereference.vala: support
	  arrays of generic types
	* vala/valasymbolresolver.vala: don't take ownership of elements of weak
	  arrays
	* vala/valasemanticanalyzer.vala: accept uint as index value
	* vala/valasemanticanalyzer.vala, vala/valacodegenerator.vala,
	  vala/valastatement.vala: minor cleanup of creation methods
	* vala/valacodegenerator.vala: support creation methods for structs, fix
	  pointer as return type
	* vapi/glib-2.0.vala: add CLAMP and g_spaced_primes_closest

2007-04-03  Jürg Billeter  <j@bitron.ch>

	* vapi/math.vala: add mathematical functions, patch by
	  Mathias Hasselmann
	* vapi/Makefile.am: update

2007-04-03  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: initialize new array elements after
	  resizing an array, patch by Mathias Hasselmann
	* vala/valaproperty.vala: fix for interface properties

2007-04-03  Jürg Billeter  <j@bitron.ch>

	* doc/valac.1, doc/Makefile.am: add manual page for valac written by
	  Marc-André Lureau
	* Makefile.am, configure.ac: update

2007-04-03  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l, vala/parser.y, vala/valasemanticanalyzer.vala,
	  vala/valatypereference.vala: support declaration of local arrays
	* tests/test-022.vala: test local array declaration

2007-04-03  Jürg Billeter  <j@bitron.ch>
